<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RunFish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter">ENTER</string>
    <string name="run">RUN</string>
    <string name="fish">FISH</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="todo">TODO</string>
    <string name="email_text">Email</string>
    <string name="password_value">Password</string>
    <string name="sign_in_value">Sign in</string>
    <string name="username_text">Username</string>
    <string name="corda1">corda1</string>
    <string name="corda2">corda2</string>
    <string name="description_image_google">Google logo</string>
    <string name="description_user_image">User image</string>
    <string name="singleplayer">SINGLEPLAYER</string>
    <string name="resume">RESUME</string>
    <string name="levels">LEVELS</string>
    <string name="freemode">FREE MODE</string>
    <string name="description_image_corda">Imatge corda</string>
    <string name="description_image_singleplayer">Imatge tabla singleplayer</string>
    <string name="Tutorial">TUTORIAL</string>
    <string name="level1">LEVEL 1</string>
    <string name="level2">LEVEL 2</string>
    <string name="level3">LEVEL 3</string>
    <string name="level4">LEVEL 4</string>
    <string name="level5">LEVEL 5</string>
    <string name="level6">LEVEL 6</string>
    <string name="level7">LEVEL 7</string>
    <string name="level8">LEVEL 8</string>
    <string name="level9">LEVEL 9</string>
    <string name="level10">LEVEL 10</string>
    <string name="menu">MENU</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="shop">SHOP</string>
    <string name="stats">STATS</string>
    <string name="options">OPTIONS</string>
    <string name="users_ini">0</string>
    <string name="invite">INVITE</string>
    <string name="music">MUSIC</string>
    <string name="sounds">SOUNDS</string>
    <string name="vibracion">VIBRATION</string>
    <string name="language">LANGUAGE</string>
    <string name="description_image_cross">Cross image</string>
    <string name="total_fish">TOTAL FISH:</string>
    <string name="plankton_collected">PLANKTON COLLECTED:</string>
    <string name="number_of_deaths">NUMBER OF DEATHS:</string>
    <string name="murdered_fish">MURDERED FISH:</string>
    <string name="max_distance_traveled">MAX DISTANCE TRAVELED:</string>
    <string name="number_zero">0</string>
    <string name="go">GO!</string>
    <string name="image_player2">Image Player2</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="preu_common_fish">500</string>
    <string name="common_fish">COMMON FISH</string>
    <string name="description_image_plankton">Plankton image</string>
    <string name="description_image_fish">Fish image</string>
    <string name="capacity">CAPACITY</string>
    <string name="life">LIFE</string>
    <string name="speed">SPEED</string>
    <string name="meters">85 METERS</string>
    <string name="description_image_shark">shark</string>
    <string name="description_image_mina">mina</string>
    <string name="description_image_joystick">joystick</string>
    <string name="description_image_pause">pause</string>
    <string name="description_image_taulell">Table Image</string>
    <string name="friend">FRIEND</string>
    <string name="description_image_green_ball">Green image_ball</string>
    <string name="description_image_grey_ball">Grey Image ball</string>
    <string name="clownfish">CLOWNFISH</string>
    <string name="select_a_fish">SELECT A FISH</string>
    <string name="level_complete">LEVEL COMPLETE!</string>
    <string name="plancton_collected">PLANCTON COLLECTED:</string>
    <string name="meters_travelled">METERS TRAVELLED:</string>
    <string name="back">BACK</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="int_plancton_collected">20</string>
    <string name="int_travelled_meters">150 METERS</string>
    <string name="game_over">GAME_OVER</string>
    <string name="retry">RETRY</string>

    <!--Fragment InvitationReceived-->
    <string name="invitationReceived_textViewMsg_invitationReceivedMsg">You have received an invitation from</string>
    <string name="invitationReceived_buttonAccept_acceptMsg">Accept</string>
    <string name="invitationReceived_buttonReject_rejectMsg">Reject</string>
    <string name="invitationReceived_textView_invitingUserName_placeholder">Username placeholder</string>


</resources>
