<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".InvitationRecieved">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/invitationReceived_buttonAccept_acceptMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/invitationReceived_button_aceptar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/invitationReceived_textView_mensajeUnirte"
                android:layout_marginStart="76dp"/>
        <TextView
                android:text="@string/invitationReceived_textViewMsg_invitationReceivedMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/invitationReceived_textView_mensajeUnirte"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/invitationReceived_buttonReject_rejectMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/invitationReceived_button_rechazar" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/invitationReceived_button_aceptar"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.517" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/invitationReceived_textView_mensajeUnirte"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>