<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".GameOverFragment" android:id="@+id/constraingLayout">
    <android.support.constraint.ConstraintLayout
            android:layout_width="500dp"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="@string/game_over"
                android:layout_width="352dp"
                android:layout_height="wrap_content" android:id="@+id/textView_GameOver"
                android:background="@drawable/new_tablon_izq" android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp" style="@style/MistralStyle"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="75dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="75dp"/>
        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_back"
                android:background="@drawable/fusta_animation" style="@style/MistralStyle"
                android:layout_marginTop="75dp" app:layout_constraintTop_toBottomOf="@+id/textView_GameOver"
                app:layout_constraintStart_toStartOf="@+id/textView_GameOver"/>
        <Button
                android:text="@string/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_retry"
                android:background="@drawable/fusta_animation" style="@style/MistralStyle"
                app:layout_constraintTop_toTopOf="@+id/button_back"
                app:layout_constraintEnd_toEndOf="@+id/textView_GameOver"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>