<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SinglePlayerFragment" android:background="@drawable/fons">
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda5"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/button_fish_multiplayer" android:layout_marginStart="36dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_freemode_singleplayer"
            app:layout_constraintTop_toTopOf="@+id/button_fish_multiplayer"
            android:contentDescription="@string/description_image_corda"/>
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda4"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_view_corda3" android:layout_marginStart="136dp"
            app:layout_constraintVertical_bias="0.555"
            app:layout_constraintBottom_toBottomOf="@+id/button_fish_multiplayer"
            app:layout_constraintTop_toTopOf="@+id/button_levels"
            android:contentDescription="@string/description_image_corda"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_fish_multiplayer"
            android:background="@drawable/new_tablon"
            style="@style/MistralStyle" android:text="@string/fish" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_levels"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_freemode_singleplayer"
            android:background="@drawable/new_tablon"
            style="@style/MistralStyle" android:text="@string/freemode" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_fish_multiplayer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda3"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/button_levels" android:layout_marginStart="36dp"
            app:layout_constraintVertical_bias="0.555"
            app:layout_constraintBottom_toBottomOf="@+id/button_fish_multiplayer"
            app:layout_constraintTop_toTopOf="@+id/button_levels"
            android:contentDescription="@string/description_image_corda"/>
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/image_view_corda4"
            app:layout_constraintStart_toEndOf="@+id/image_view_corda5" android:layout_marginStart="140dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_freemode_singleplayer"
            android:contentDescription="@string/description_image_corda"/>
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda2"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.588"
            app:layout_constraintStart_toEndOf="@+id/image_view_corda1" android:layout_marginStart="136dp"
            app:layout_constraintTop_toTopOf="@+id/button_resume_singleplayer"
            app:layout_constraintBottom_toBottomOf="@+id/button_levels"
            android:contentDescription="@string/description_image_corda"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_levels"
            android:background="@drawable/new_tablon"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button_resume_singleplayer"
            style="@style/MistralStyle" android:text="@string/levels" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_resume_singleplayer"
            android:background="@drawable/new_tablon"
            style="@style/MistralStyle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:src="@drawable/tablon"
            android:layout_width="170dp"
            android:layout_height="55dp" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.047"
            android:contentDescription="@string/description_image_singleplayer"/>
    <TextView
            android:text="@string/singleplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/text_view_menu"
            app:layout_constraintStart_toStartOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" app:layout_constraintVertical_bias="0.7"
            style="@style/MistralStyle"/>
    <ImageView
            android:src="@drawable/corda"
            android:layout_width="wrap_content"
            android:layout_height="45dp" android:id="@+id/image_view_corda1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/button_resume_singleplayer" android:layout_marginStart="36dp"
            app:layout_constraintVertical_bias="0.588"
            app:layout_constraintTop_toTopOf="@+id/button_resume_singleplayer"
            app:layout_constraintBottom_toBottomOf="@+id/button_levels"
            android:contentDescription="@string/description_image_corda"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_comeback" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/flecha_izq"/>
</android.support.constraint.ConstraintLayout>