<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".statsFragment" android:id="@+id/frameLayout"
                                             android:background="@drawable/fons">
    <TextView
            android:text="@string/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_stats" style="@style/MistralStyle"
            android:background="@drawable/tablon"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stats"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:background="@drawable/tablon_grande"
            app:layout_constraintVertical_bias="0.367">

        <ScrollView
                android:layout_width="343dp"
                android:layout_height="221dp"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintHorizontal_bias="0.513"
                android:id="@+id/scrollView"
                android:scrollbarThumbVertical="@drawable/barra">
            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:orientation="vertical"
                                                         android:id="@+id/constraintLayout_scrollContent"
                                                         android:minHeight="177dp">
                <TextView
                        android:text="@string/number_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_int_murdered_fish"
                        style="@style/MistralStyle"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_int_deaths"
                        app:layout_constraintStart_toEndOf="@+id/text_view_murdered_fish"
                        android:layout_marginStart="16dp"/>
                <TextView
                        android:text="@string/number_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_int_max_dist"
                        style="@style/MistralStyle"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_int_murdered_fish"
                        app:layout_constraintStart_toEndOf="@+id/text_view_max_distance_traveled"
                        android:layout_marginStart="16dp"/>
                <TextView
                        android:text="@string/number_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_int_deaths"
                        style="@style/MistralStyle"
                        app:layout_constraintStart_toEndOf="@+id/text_view_number_of_deaths"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_int_plankton"/>
                <TextView
                        android:text="@string/total_fish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_total_fish"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toTopOf="parent" style="@style/MistralStyle"/>
                <TextView
                        android:text="@string/plankton_collected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_plantkton_collected"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_total_fish" style="@style/MistralStyle"/>
                <TextView
                        android:text="@string/number_of_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_number_of_deaths"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_plantkton_collected"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        style="@style/MistralStyle"/>
                <TextView
                        android:text="@string/murdered_fish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_murdered_fish"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_number_of_deaths"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        style="@style/MistralStyle"/>
                <TextView
                        android:text="@string/max_distance_traveled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_max_distance_traveled"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_murdered_fish"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        style="@style/MistralStyle"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_int_total_fish"
                        app:layout_constraintStart_toEndOf="@+id/text_view_total_fish"
                        android:layout_marginStart="16dp" style="@style/MistralStyle"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/number_zero"/>
                <TextView
                        android:text="@string/number_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_int_plankton"
                        app:layout_constraintStart_toEndOf="@+id/text_view_plantkton_collected"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_int_total_fish"
                        style="@style/MistralStyle"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_comeback"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/flecha_animation_izq"/>
</android.support.constraint.ConstraintLayout>